--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codiumug.android">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".MaterialDesignEx"></activity>
+        <activity android:name=".CardViewRecyc"></activity>
+        <activity android:name=".RecyclerViewEx" />
+        <activity android:name=".MaterialDesignEx" />
         <activity android:name=".ListViewEx" />
         <activity android:name=".MainActivity">
             <intent-filter>
