--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codiumug.android">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android">
-        <activity android:name=".CardViewRecyc"></activity>
+        <activity android:name=".FontsEx"></activity>
+        <activity android:name=".CardViewRecyc" />
         <activity android:name=".RecyclerViewEx" />
         <activity android:name=".MaterialDesignEx" />
         <activity android:name=".ListViewEx" />
